--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/ShootingMap.ShootingMap
+EditorStartupMap=/Game/Maps/ShootingMap.ShootingMap
+GlobalDefaultGameMode=/Game/Project/BP_GameModeBase.BP_GameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
